--- a/css/app.css
+++ b/css/app.css
@@ -111,8 +111,12 @@ ul li {
 
 footer {
     width: 100%;
+    height: 25px;
     position: absolute;
     bottom: 0;
+    left: 0;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 footer .box {
