--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -19,7 +19,7 @@
 		<section>
 			I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.
 			My dissertation studies the intersection of political economy, property rights, and land use changes in preindustrial England.
-			Fields: economic history, political economy, urban economics, applied microeconomics
+			Fields: economic history, political economy, urban economics, applied microeconomics.
 		</section>
 	</div>
 </div>
