--- a/css/app.css
+++ b/css/app.css
@@ -112,7 +112,7 @@ ul li {
 footer {
     width: 100%;
     height: 25px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     padding-left: 0px;
@@ -124,7 +124,9 @@ footer .box {
 }
 
 footer .box p {
-    margin: 0;
+    height: 25px;
+    font-size: 0.8em;
+    padding: 3px 0 5px;
     border-top: 1px solid #405f91;
 }
 
