--- a/css/app.css
+++ b/css/app.css
@@ -112,6 +112,8 @@ ul li {
 footer {
     width: 100%;
     height: 25px;
+    color: white;
+    background-color: #405f91;
     position: fixed;
     bottom: 0;
     left: 0;
