--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -17,9 +17,9 @@
 	</div>
 	<div class="col-sm-5 rightProfile">
 		<section>
-			I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.
-			My dissertation studies the intersection of political economy, property rights, and land use changes in preindustrial England.
-			Fields: economic history, political economy, urban economics, applied microeconomics.
+			<p>I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.</p>
+			<p>Fields: experimental economics, applied microeconomics, industrial organization.</p>
+			<p>I will be available for interviews at the ASSA Annual Meeting in Philadelphia, January 5-7, 2018.</p>
 		</section>
 	</div>
 </div>
