--- a/views/pages/references.html
+++ b/views/pages/references.html
@@ -1,32 +1,32 @@
 <div class="col-md-offset-2 col-md-8"  ng-controller="references">
 
 	<div class="col-sm-4">
-		<label>Dan Bogart</label>
+		<label>Professor Michael McBride</label>
 		<address>
 			Department of Economics<br>
 			University of California, Irvine<br>
-			dbogart@uci.edu<br>
-			1 (949) 824-3191<br>
+			mcbride@uci.edu<br>
+			1 (949) 824-7417
 		</address>
 	</div>
 
 	<div class="col-sm-4">
-		<label>Gary Richardson</label>
+		<label>Chancellor's Professor Jan Brueckner</label>
 		<address>
 			Department of Economics<br>
 			University of California, Irvine<br>
-			garyr@uci.edu<br>
-			1 (949) 824-5089
+			jkbrueck@uci.edu<br>
+			1 (949) 824-0083
 		</address>
 	</div>
 
 	<div class="col-sm-4">
-		<label>Stergios Skaperdas</label>
+		<label>Professor John Duffy</label>
 		<address>
 			Department of Economics<br>
 			University of California, Irvine<br>
-			sskaperd@uci.edu<br>
-			1 (949) 824-4167
+			duffy@uci.edu<br>
+			1 (949) 824-8341
 		</address>
 	</div>
 
