--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 #iZotova {
     color: #496993;
-    font-family: Times New Roman;
-    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     padding-bottom: 40px;
     background-image: url("../images/seamless_texture.png");
 }
@@ -32,6 +32,11 @@
 .navbar-inverse .navbar-nav>.nav-item.active> a {
     background-color: #405f91 !important;
     color: white;
+}
+
+.navbar-inverse a.navbar-brand:hover,
+.navbar-inverse .navbar-nav > li a:hover {
+    color: lightgray !Important;
 }
 
 .navbar-inverse .navbar-nav .dropdown,
