added new picture.

--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-5 leftProfile">
 		<section>
 			<div class="profileImage">
-				<img src="images/minnie.png">
+				<img src="images/irinazotova.png">
 			</div>
 			<div class="profileAddress">
 				<p>izotova@uci.edu</p>
