--- a/css/app.css
+++ b/css/app.css
@@ -88,6 +88,8 @@ div[ui-view] {
 
 .profileImage > img {
     width: 200px;
+    border-radius: 7px;
+    border: 5px solid white;
 }
 
 .profileAddress{
