--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-5 leftProfile">
 		<section>
 			<div class="profileImage">
-				<img style="display: none"  class="center-block img-responsive" ng-src="images/irinazotova.jpg" imageonload="images/loading_icon_64.gif" alt="Processing...">
+				<img style="display: none"  class="center-block img-responsive" ng-src="images/irinazotova2.jpg" imageonload="images/loading_icon_64.gif" alt="Processing...">
 			</div>
 			<div class="profileAddress">
 				<p>izotova@uci.edu</p>
