--- a/views/pages/experience.html
+++ b/views/pages/experience.html
@@ -2,7 +2,7 @@
 	<div>
 		Data Science Certificate Program, UCI
 	</div>
-	<ul class="achievement">
+	<ul class="profile-modal achievement">
 		<li>
 			Courses: Predictive Modeling with Python, Advanced Predictive Modeling with Python, Natural Language Processing with Python, Introduction to Linux/HPC, Introduction to R, Advanced Introduction to Julia
 		</li>
@@ -14,7 +14,7 @@
 	<div>
 		Age Discrimination Correspondence Studies
 	</div>
-	<ul class="achievement">
+	<ul class="profile-modal achievement">
 		<li>
 			Initiated and automated a correspondence study. Implemented code to cost-effectively send 14K+ job applications across the U.S.
 		</li>
