--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -16,7 +16,7 @@
 		</section>
 	</div>
 	<div class="col-sm-5 rightProfile">
-		<section>
+		<section class="profile-modal">
 			<p>I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.</p>
 			<p>Fields: experimental economics, applied microeconomics, industrial organization.</p>
 			<p>I will be available for interviews at the ASSA Annual Meeting in Philadelphia, January 5-7, 2018.</p>
