--- a/views/pages/references.html
+++ b/views/pages/references.html
@@ -2,7 +2,7 @@
 
 	<div class="col-sm-4">
 		<label>Professor Michael McBride</label>
-		<address>
+		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
 			mcbride@uci.edu<br>
@@ -12,7 +12,7 @@
 
 	<div class="col-sm-4">
 		<label>Chancellor's Professor Jan Brueckner</label>
-		<address>
+		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
 			jkbrueck@uci.edu<br>
@@ -22,7 +22,7 @@
 
 	<div class="col-sm-4">
 		<label>Professor John Duffy</label>
-		<address>
+		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
 			duffy@uci.edu<br>
