owning the documents.

--- a/views/pages/research.html
+++ b/views/pages/research.html
@@ -1,38 +1,19 @@
 <div class="col-md-offset-2 col-md-8" ng-controller="research">
 
 	<p>
-		<q>Can Counselors Help Solve the Dropout Crisis? Evidence from California Public High Schools</q><br>
-		<cite>Job Market Paper</cite><br>
-		<cite>Under Review</cite>
-	</p>
-
-
-	<p>
-		<q>When Does the STEM Gender Gap Emerge? Evidence From Over 28,000 Science Fair Projects</q><br>
-		<cite>Under Review</cite>
+		<q>Worker History and Labor Markets: The Role of Costly Information</q><br>
+		<cite>Job Market Paper</cite><br><br><br>
 	</p>
 
 	<p>
-		<q>Fertility Assimilation: The Role of Culture</q><br>
-		<cite>2015 Charles A. Lave Paper Prize for Creative Modeling in Social Sciences, UCI</cite><br>
-		<cite>Under Review</cite>
-	</p>
+		<i>Zotova I., 2017</i> <q>Post-Crash Airline Pricing: A Case Study of Alaska Airlines Flight 261.</q><br>
+		<cite>Economics of Transportation 10, 18-22.</cite><br><br>
+		<text>
+			This paper examines the impact of the crash of Alaska Airlines Flight 261 on the domestic fares of the crash carrier, using a difference-in-difference approach. The results show that the crash reduced fares of Alaska Airlines relative to those of its competitors only in the months right after the crash, indicating that the financial ramifications are not persistent.
+		</text>
+	</p><br><br>
 
 	<p>
-		<q>The Role of Same-Gender Teachers, Advisors, and Parents in Determining Science Fair Gender Gaps</q>
-	</p>
-
-	<p>
-		<q>Automating Correspondence Studies with Python and SQLite: Guide and Code</q>
-	</p>
-
-	<p>
-		<q>Do State Age Discrimination Protections Reduce Hiring Discrimination Against Older Workers? Evidence from a Field Experiment</q><br>
-		<cite>with David Neumark, Patrick Button, and Ian Burn</cite>
-	</p>
-
-	<p>
-		<q>Predictors of Age Discrimination in Job Ads: Evidence from a Field Experiment</q><br>
-		<cite>with David Neumark, Patrick Button, and Ian Burn</cite>
+		<q>References in the Labor Market: An Experimental Study</q>
 	</p>
 </div>
