--- a/views/pages/teaching.html
+++ b/views/pages/teaching.html
@@ -1,2 +1,38 @@
 <div ng-controller="teaching">
+	<label>Teaching Assistant	University of California, Irvine</label><br><br>
+	<ul class="profile-modal achievement">
+		<li>
+			ECON 15A – “Probability & Statistics I”
+			<cite>Summer 2015</cite>
+		</li>
+		<li>
+			ECON 20A – “Basic Economics: Microeconomics”
+			<cite>Summer 2014, Fall 2014, Winter 2015</cite>
+		</li>
+		<li>
+			ECON 100A – “Intermediate Economics I”
+			<cite>Summer 2016</cite>
+		</li>
+		<li>
+			ECON 100B – “Intermediate Economics II”
+			<cite>Winter 2017, Spring 2017, Summer 2017</cite>
+		</li>
+		<li>
+			ECON 100C – “Intermediate Economics III”
+			<cite>Spring 2015, Spring 2016</cite>
+		</li>
+		<li>
+			ECON 107 – “Asymmetric Information”
+			<cite>Fall 2015, Fall 2016</cite>
+		</li>
+		<li>
+			ECON 122A – “Applied Econometrics I”
+			<cite>Winter 2016</cite>
+		</li>
+		<li>
+			SOC SCI 3A – “Computer Based Research in the Social Sciences”
+			<cite>Fall 2013, Winter 2014, Spring 2014</cite>
+		</li>
+	</ul>
+</p>
 </div>
