--- a/views/pages/experience.html
+++ b/views/pages/experience.html
@@ -1,5 +1,5 @@
 <div class="col-md-offset-2 col-md-8" ng-controller="experience">
-	<div>
+<!--	<div>
 		Data Science Certificate Program, UCI
 	</div>
 	<ul class="profile-modal achievement">
@@ -37,5 +37,5 @@
 	</p>
 	<p>
 		Intern, Beacon Economics
-	</p>
+	</p>-->
 </div>
