increased spacing b/w list items.

--- a/views/pages/teaching.html
+++ b/views/pages/teaching.html
@@ -2,35 +2,35 @@
 	<h4>Teaching Assistant	University of California, Irvine</h4><br>
 	<ul class="profile-modal achievement">
 		<li>
-			ECON 15A – “Probability & Statistics I”
+			ECON 15A – “Probability & Statistics I”<br>
 			<cite>Summer 2015</cite>
 		</li>
 		<li>
-			ECON 20A – “Basic Economics: Microeconomics”
+			ECON 20A – “Basic Economics: Microeconomics”<br>
 			<cite>Summer 2014, Fall 2014, Winter 2015</cite>
 		</li>
 		<li>
-			ECON 100A – “Intermediate Economics I”
+			ECON 100A – “Intermediate Economics I”<br>
 			<cite>Summer 2016</cite>
 		</li>
 		<li>
-			ECON 100B – “Intermediate Economics II”
+			ECON 100B – “Intermediate Economics II”<br>
 			<cite>Winter 2017, Spring 2017, Summer 2017</cite>
 		</li>
 		<li>
-			ECON 100C – “Intermediate Economics III”
+			ECON 100C – “Intermediate Economics III”<br>
 			<cite>Spring 2015, Spring 2016</cite>
 		</li>
 		<li>
-			ECON 107 – “Asymmetric Information”
+			ECON 107 – “Asymmetric Information”<br>
 			<cite>Fall 2015, Fall 2016</cite>
 		</li>
 		<li>
-			ECON 122A – “Applied Econometrics I”
+			ECON 122A – “Applied Econometrics I”<br>
 			<cite>Winter 2016</cite>
 		</li>
 		<li>
-			SOC SCI 3A – “Computer Based Research in the Social Sciences”
+			SOC SCI 3A – “Computer Based Research in the Social Sciences”<br>
 			<cite>Fall 2013, Winter 2014, Spring 2014</cite>
 		</li>
 	</ul>
