--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,9 @@
     margin: 20px auto;
 }
 
+cite {
+    font-size: 14px;
+}
 .navbar {
     border-radius: 0;
 }
@@ -114,6 +117,10 @@ div[ui-view] {
 
 ul.achievement {
     list-style-type: square;
+}
+
+ul li {
+    padding-bottom: 15px;
 }
 
 footer {
