--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 #iZotova {
     color: #4a6786;
-    font-family: 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 16px;
     padding-bottom: 40px;
