--- a/views/menu.html
+++ b/views/menu.html
@@ -1,7 +1,7 @@
 <h1 class="title">Irina Zotova</h1>
 <nav id="menu" class="navbar navbar-inverse" ng-controller="menu">
 	<div class="container">
-		<a id="home-menu" ui-sref="home" class="navbar-brand" title="Home" ng-class="{ active: $state.is('home')}" >
+		<a id="home-menu" ui-sref="home" class="navbar-brand" title="HOME" ng-class="{ active: $state.is('home')}" >
 			<i class="fa fa-2x fa-id-card" aria-hidden="true"></i>
 		</a>
 		<div class="navbar-header">
@@ -18,13 +18,13 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li class="nav-item" ng-class="{ active: $state.is('experience')}">
-					<a ui-sref="experience">Experience</a>
+					<a ui-sref="experience">EXPERIENCE</a>
 				</li>
 				<li class="nav-item" ng-class="{ active: $state.is('research')}">
-					<a ui-sref="research">Research</a>
+					<a ui-sref="research">RESEARCH</a>
 				</li>
 				<li class="nav-item" ng-class="{ active: $state.is('teaching')}">
-					<a ui-sref="teaching">Teaching</a>
+					<a ui-sref="teaching">TEACHING</a>
 				</li>
 <!--				<li class="dropdown" ng-class="{ active: $state.is('teaching') || $state.is('classMaterials') }">
 					<a ui-sref="teaching"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teaching <span class="caret"></span></a>
@@ -33,7 +33,7 @@
 					</ul>
 				</li>-->
 				<li class="nav-item" ng-class="{ active: $state.is('references')}">
-					<a ui-sref="references">References</a>
+					<a ui-sref="references">REFERENCES</a>
 				</li>
 <!--				<li class="nav-item" ng-click="$state.go('cv')" ng-class="{ active: $state.is('cv')}">
 					<a ng-href="{{cvRef}}"  target="_blank">CV</a>
