--- a/views/pages/teaching.html
+++ b/views/pages/teaching.html
@@ -1,5 +1,6 @@
 <div class="col-md-offset-2 col-md-8" ng-controller="teaching">
-	<h4>Teaching Assistant	University of California, Irvine</h4><br>
+	<h3>Teaching Assistant</h3>
+		<h4>University of California, Irvine</h4><br>
 	<ul class="profile-modal achievement">
 		<li>
 			ECON 15A – “Probability & Statistics I”<br>
