--- a/views/menu.html
+++ b/views/menu.html
@@ -35,9 +35,9 @@
 				<li class="nav-item" ng-class="{ active: $state.is('references')}">
 					<a ui-sref="references">REFERENCES</a>
 				</li>
-<!--				<li class="nav-item" ng-click="$state.go('cv')" ng-class="{ active: $state.is('cv')}">
+				<li class="nav-item" ng-click="$state.go('cv')" ng-class="{ active: $state.is('cv')}">
 					<a ng-href="{{cvRef}}"  target="_blank">CV</a>
-				</li>-->
+				</li>
 			</ul>
 		</div>
 	</div>
