context styling revision.

--- a/views/pages/research.html
+++ b/views/pages/research.html
@@ -1,27 +1,31 @@
 <div class="col-md-offset-2 col-md-8" ng-controller="research">
 
-	<p>
-		<toc>
-			<q>Worker History and Labor Markets: The Role of Costly Information</q><br>
-			<text>Job Market Paper</text>
-		</toc>
-		<context>
-			<text>
-			</text>
-		</context>
-	</p>
 
+
+	<h5><b>Publications</b></h5>
 	<p>
 		<toc>
 			<author>Zotova I., 2017</author><q>Post-Crash Airline Pricing: A Case Study of Alaska Airlines Flight 261.</q><br>
-			<text>Economics of Transportation 10, 18-22.</text>
+			<text><i>Economics of Transportation</i> 10, 18-22.</text>
 		</toc>
 		<context>
 			<text>
 				This paper examines the impact of the crash of Alaska Airlines Flight 261 on the domestic fares of the crash carrier, using a difference-in-difference approach. The results show that the crash reduced fares of Alaska Airlines relative to those of its competitors only in the months right after the crash, indicating that the financial ramifications are not persistent.
 			</text>
 		</context>
+	</p>
 
+	<h5><b>Working Papers</b></h5>
+	<p>
+		<toc>
+			<q>Worker History and Labor Markets: The Role of Costly Information</q><br>
+			<text><i>Job Market Paper</i></text>
+		</toc>
+		<context>
+			<text>
+			</text>
+		</context>
+	</p>
 	<p>
 		<toc>
 			<q>References in the Labor Market: An Experimental Study</q>
