--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,15 @@
 h3 {
     margin-before: 0;
     margin-top: 0;
+    font-size: 22px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    font-size: 16px;
 }
 
 author {
