--- a/css/app.css
+++ b/css/app.css
@@ -33,8 +33,12 @@ toc {
     margin-bottom: 5px;
 }
 
-context {
-    margin-bottom: 25px;
+p {
+    margin-top: 30px;
+}
+
+p:first-child {
+    margin-top: 0;
 }
 
 title {
