--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-5 leftProfile">
 		<section>
 			<div class="profileImage">
-				<img style="display: none"  class="center-block img-responsive" ng-src="images/irinazotova3.jpg" imageonload="images/loading_icon_64.gif" alt="Processing...">
+				<img style="display: none"  class="center-block img-responsive img-profile" ng-src="images/irinazotova3.jpg" imageonload="images/loading_icon_64.gif" alt="Processing...">
 			</div>
 			<div class="profileAddress">
 				<p>izotova@uci.edu</p>
@@ -16,7 +16,7 @@
 		</section>
 	</div>
 	<div class="col-sm-5 rightProfile">
-		<section class="profile-modal">
+		<section class="profile-mobile">
 			<p>I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.</p>
 			<p>Fields: experimental economics, applied microeconomics, industrial organization.</p>
 			<p>I will be available for interviews at the ASSA Annual Meeting in Philadelphia, January 5-7, 2018.</p>
