--- a/views/menu.html
+++ b/views/menu.html
@@ -1,4 +1,4 @@
-<h1 class="title">Irina Zotova</h1>
+<h1 id="profileTitle" class="title">Irina Zotova</h1>
 <nav id="menu" class="navbar navbar-inverse" ng-controller="menu">
 	<div class="container">
 		<a id="home-menu" ui-sref="home" class="navbar-brand" title="HOME" ng-class="{ active: $state.is('home')}" >
