--- a/views/menu.html
+++ b/views/menu.html
@@ -1,5 +1,7 @@
 <h1 id="profileTitle" class="title">Irina Zotova</h1>
-<nav id="menu" class="navbar navbar-inverse" ng-controller="menu">
+<div id="content-anchor"></div>
+<nav id="menu-phantom"></nav>
+<nav id="menu" class="navbar navbar-inverse"  ng-controller="menu">
 	<div class="container">
 		<a id="home-menu" ui-sref="home" class="navbar-brand" title="HOME" ng-class="{ active: $state.is('home')}" >
 			<i class="fa fa-2x fa-id-card" aria-hidden="true"></i>
