--- a/views/pages/experience.html
+++ b/views/pages/experience.html
@@ -38,4 +38,12 @@
 	<p>
 		Intern, Beacon Economics
 	</p>-->
+
+
+	<p class="excerpt profile-mobile" ng-repeat="excerpt in excerpts">
+		<i class="fa fa-2x fa-quote-left" aria-hidden="true"></i>
+		<span>
+			{{excerpt}}
+		</span>
+	</p>
 </div>
