--- a/views/pages/experience.html
+++ b/views/pages/experience.html
@@ -39,7 +39,7 @@
 		Intern, Beacon Economics
 	</p>-->
 
-	<h5><b>Samples of student feedback</b></h5>
+	<h4>Samples of student feedback</h4>
 	<p class="excerpt profile-mobile" ng-repeat="excerpt in excerpts">
 		<i class="fa fa-2x fa-quote-left" aria-hidden="true"></i>
 		<span>
