--- a/views/menu.html
+++ b/views/menu.html
@@ -19,9 +19,6 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="nav-item" ng-class="{ active: $state.is('experience')}">
-					<a ui-sref="experience" ng-click="smoothScroll()">EXPERIENCE</a>
-				</li>
 				<li class="nav-item" ng-class="{ active: $state.is('research')}">
 					<a ui-sref="research" ng-click="smoothScroll()">RESEARCH</a>
 				</li>
@@ -36,6 +33,9 @@
 				</li>-->
 				<li class="nav-item" ng-class="{ active: $state.is('references')}">
 					<a ui-sref="references" ng-click="smoothScroll()">REFERENCES</a>
+				</li>
+				<li class="nav-item" ng-class="{ active: $state.is('feedback')}">
+					<a ui-sref="feedback" ng-click="smoothScroll()">FEEDBACK</a>
 				</li>
 				<li class="nav-item" ng-click="$state.go('cv')" ng-class="{ active: $state.is('cv')}">
 					<a ng-href="{{cvRef}}"  target="_blank">CV</a>
