--- a/views/pages/feedback.html
+++ b/views/pages/feedback.html
@@ -1,4 +1,4 @@
-<div class="col-md-offset-1 col-md-10" ng-controller="experience">
+<div class="col-md-offset-1 col-md-10" ng-controller="feedback">
 <!--	<div>
 		Data Science Certificate Program, UCI
 	</div>
