--- a/views/menu.html
+++ b/views/menu.html
@@ -19,6 +19,9 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
+				<li class="nav-item" ng-class="{ active: $state.is('education')}">
+					<a ui-sref="education" ng-click="smoothScroll()">EDICATION</a>
+				</li>
 				<li class="nav-item" ng-class="{ active: $state.is('research')}">
 					<a ui-sref="research" ng-click="smoothScroll()">RESEARCH</a>
 				</li>
