--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -1,24 +1,24 @@
-<div class="col-md-offset-2 col-md-8" ng-controller="education">
+<div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-controller="education">
 
 	<p>
 	<h5><b>Education</b></h5>
-	<toc>
-		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years pull-right">Expected 2018</span>
-	</toc>
-	<toc>
-		<author>M.A. Economics, University of California, Irvine</author> <span class="years pull-right">2014</span>
-	</toc>
-	<toc>
-		<author>B.S. Economics/Mathematics, Cum Laude, University of California, San Diego</author> <span class="years pull-right">2013</span>
-	</toc>
+	<edu>
+		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years">Expected 2018</span>
+	</edu>
+	<edu>
+		<author>M.A. Economics, University of California, Irvine</author> <span class="years">2014</span>
+	</edu>
+	<edu>
+		<author>B.S. Economics/Mathematics, Cum Laude, University of California, San Diego</author> <span class="years">2013</span>
+	</edu>
 
 
 	<p>
 	<h5><b>Skills</b></h5>
-	<toc>
+	<edu>
 		<author>Technical: Matlab, STATA, z-Tree, LaTeX, Java</author>
-	</toc>
-	<toc>
+	</edu>
+	<edu>
 		<author>Foreign Language: Russian (Native)</author>
-	</toc>
+	</edu>
 </div>
