--- a/css/app.css
+++ b/css/app.css
@@ -109,7 +109,7 @@ cite {
 div[ui-view] {
     position: relative;
     left: 0%;
-    padding: 0 20px;
+    padding: 0;
     margin-top: 20px;
     width: 100%;
 }
