--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -9,16 +9,16 @@
 		<author>M.A. Economics, University of California, Irvine</author> <span class="years">2014</span>
 	</edu>
 	<edu>
-		<author>B.S. Economics/Mathematics, Cum Laude, University of California, San Diego</author> <span class="years">2013</span>
+		<author>B.S. Economics/Mathematics, <i>Cum Laude</i>, University of California, San Diego</author> <span class="years">2013</span>
 	</edu>
 
 
 	<p>
 	<h5><b>Skills</b></h5>
-	<edu>
+	<ski>
 		<author>Technical: Matlab, STATA, z-Tree, LaTeX, Java</author>
-	</edu>
-	<edu>
+	</ski>
+	<ski>
 		<author>Foreign Language: Russian (Native)</author>
-	</edu>
+	</ski>
 </div>
