--- a/views/menu.html
+++ b/views/menu.html
@@ -20,7 +20,7 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li class="nav-item" ng-class="{ active: $state.is('education')}">
-					<a ui-sref="education" ng-click="smoothScroll()">EDICATION</a>
+					<a ui-sref="education" ng-click="smoothScroll()">EDUCATION</a>
 				</li>
 				<li class="nav-item" ng-class="{ active: $state.is('research')}">
 					<a ui-sref="research" ng-click="smoothScroll()">RESEARCH</a>
