--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -16,9 +16,9 @@
 	<p>
 	<h5><b>Skills</b></h5>
 	<ski>
-		<author>Technical: Matlab, STATA, z-Tree, LaTeX, Java</author>
+		<author><b>Technical:</b> Matlab, STATA, z-Tree, LaTeX, Java</author>
 	</ski>
 	<ski>
-		<author>Foreign Language: Russian (Native)</author>
+		<author><b>Foreign Language:</b> Russian (Native)</author>
 	</ski>
 </div>
