--- a/views/pages/teaching.html
+++ b/views/pages/teaching.html
@@ -24,7 +24,7 @@
 		</li>
 		<li>
 			ECON 107 – “Asymmetric Information”<br>
-			<cite>Fall 2015, Fall 2016</cite>
+			<cite>Fall 2015, Fall 2016, Fall 2017</cite>
 		</li>
 		<li>
 			ECON 122A – “Applied Econometrics I”<br>
