--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,8 @@
 #iZotova {
-    color: #4a6786;
-    font-family: Arial, Helvetica, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    font-size: 16px;
+    color: #445a7c; /*#4a6786;*/
+    font-family: Old Standard TT, Arial, Helvetica, sans-serif;
+    /*-webkit-font-smoothing: antialiased;*/
+    font-size: 18px;
     padding-bottom: 50px;
     background-image: url("../images/seamless_texture.png");
 }
@@ -22,15 +22,15 @@
 
 h4 {
     margin-top: 0;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 h5 {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 author {
-    margin-right: 10px;
+    margin-right: 12px;
 }
 
 context, toc, edu, ski {
@@ -58,7 +58,7 @@ title {
 }
 
 cite {
-    font-size: 14px;
+    font-size: 16px;
 }
 .navbar {
     border-radius: 0;
