made font darker.

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 #iZotova {
-    color: #445a7c; /*#4a6786;*/
+    color: #3d506f; /*#445a7c;*/ /*#4a6786;*/
     font-family: Old Standard TT, Arial, Helvetica, sans-serif;
     /*-webkit-font-smoothing: antialiased;*/
     font-size: 18px;
