--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -7,7 +7,7 @@
 			<div class="profileAddress">
 				<p>izotova@uci.edu</p>
 				<address>
-					University of California, Irvine<br>
+					<b>University of California, Irvine</b><br>
 					Department of Economics<br>
 					3151 Social Science Plaza<br>
 					Irvine, CA 92697-5100
