--- a/views/pages/references.html
+++ b/views/pages/references.html
@@ -1,7 +1,7 @@
 <div class="col-md-offset-1 col-md-10"  ng-controller="references">
 
 	<div class="col-sm-4">
-		<label>Professor Michael McBride</label>
+		<h4><b>Professor Michael McBride</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
@@ -11,7 +11,7 @@
 	</div>
 
 	<div class="col-sm-4">
-		<label>Chancellor's Professor Jan Brueckner</label>
+		<h4><b>Chancellor's Professor Jan Brueckner</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="col-sm-4">
-		<label>Professor John Duffy</label>
+		<h4><b>Professor John Duffy</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
