--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -1,7 +1,7 @@
 <div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-controller="education">
 
 	<p>
-	<h5><b>Education</b></h5>
+	<h4><b>Education</b></h4>
 	<edu>
 		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years">Expected 2018</span>
 	</edu>
@@ -14,11 +14,11 @@
 
 
 	<p>
-	<h5><b>Skills</b></h5>
+	<h4><b>Skills</b></h4>
 	<ski>
-		<author><b>Technical:</b> Matlab, STATA, z-Tree, LaTeX, Java</author>
+		<author><b>Technical:</b>&nbsp; Matlab, STATA, z-Tree, LaTeX, Java</author>
 	</ski>
 	<ski>
-		<author><b>Foreign Language:</b> Russian (Native)</author>
+		<author><b>Foreign Language:</b>&nbsp; Russian (Native)</author>
 	</ski>
 </div>
