--- a/views/pages/feedback.html
+++ b/views/pages/feedback.html
@@ -39,7 +39,7 @@
 		Intern, Beacon Economics
 	</p>-->
 
-	<h4>Sample of Student Feedback</h4>
+	<h4><b>Sample of Student Feedback</b></h4>
 	<p class="excerpt profile-mobile" ng-repeat="excerpt in excerpts">
 		<i class="fa fa-2x fa-quote-left" aria-hidden="true"></i>
 		<span>
