--- a/views/pages/teaching.html
+++ b/views/pages/teaching.html
@@ -1,5 +1,5 @@
 <div class="col-md-offset-2 col-md-8" ng-controller="teaching">
-	<h4>Teaching Assistant</h4>
+	<h4><b>Teaching Assistant</b></h4>
 		<h5>University of California, Irvine</h5><br>
 	<ul class="profile-modal achievement">
 		<li>
