font's size of titles revision.

--- a/views/pages/references.html
+++ b/views/pages/references.html
@@ -1,32 +1,38 @@
 <div class="col-md-offset-1 col-md-10"  ng-controller="references">
 
 	<div class="col-sm-4">
-		<h4><b>Professor Michael McBride</b></h4>
+		<h4><b>Professor<br>Michael McBride</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
+			<contacts>
 			mcbride@uci.edu<br>
 			1 (949) 824-7417
+			</contacts>
 		</address>
 	</div>
 
 	<div class="col-sm-4">
-		<h4><b>Chancellor's Professor Jan Brueckner</b></h4>
+		<h4><b>Chancellor's Professor<br>Jan Brueckner</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
+			<contacts>
 			jkbrueck@uci.edu<br>
 			1 (949) 824-0083
+			</contacts>
 		</address>
 	</div>
 
 	<div class="col-sm-4">
-		<h4><b>Professor John Duffy</b></h4>
+		<h4><b>Professor<br>John Duffy</b></h4>
 		<address class="profile-modal">
 			Department of Economics<br>
 			University of California, Irvine<br>
+			<contacts>
 			duffy@uci.edu<br>
 			1 (949) 824-8341
+			</contacts>
 		</address>
 	</div>
 
