--- a/views/pages/research.html
+++ b/views/pages/research.html
@@ -22,7 +22,7 @@
 		</toc>
 		<context>
 			<text>
-				Existing experimental literature in agency theory provides an employer their employee's work history at no cost. I extend this scenario by placing a price on the information. Through experimental evidence, I find employers choose to absorb the cost of obtaining history, and do not shift the burden of the fee onto the employees in the form of lower wages. If employers have access to an employee's history, they offer a wage that is positively correlated with employee work ethic. However, when they are not presented with a history, the employers base the wage on their own experience with past employees.
+				Existing experimental literature in agency theory provides an employer their employee's work history at no cost. I extend this research by placing a price on the information to develop a more realistic case. Through experimental evidence, I find employers choose to absorb the cost of obtaining history, and do not shift the burden of the fee onto the employees in the form of lower wages. If employers have access to an employee's history, they offer a wage that is positively correlated with employee work ethic. However, when they are not presented with a history, the employers base the wage on their own experience with past employees.
 			</text>
 		</context>
 	</p>
