--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -16,7 +16,7 @@
 	<p>
 	<h4><b>Skills</b></h4>
 	<ski>
-		<author><b>Technical:</b>&nbsp; Matlab, STATA, z-Tree, LaTeX, Java</author>
+		<author><b>Technical:</b>&nbsp; Stata, MATLAB, z-Tree, LaTeX, Java</author>
 	</ski>
 	<ski>
 		<author><b>Foreign Language:</b>&nbsp; Russian (Native)</author>
