Added a new picture on home page.

--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -3,7 +3,7 @@
 	<p>
 	<h4><b>Education</b></h4>
 	<edu>
-		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years">Expected 2018</span>
+		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years">2018</span>
 	</edu>
 	<edu>
 		<author>M.A. Economics, University of California, Irvine</author> <span class="years">2014</span>
