Home page revision.

--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="col-sm-5 rightProfile">
 		<section>
-			<p>I am a Ph.D. Candidate in Economics at UC Irvine and am currently on the job market.</p>
+			<p>I am a Ph.D. in Economics at UC Irvine and am currently on the job market.</p>
 			<p>Fields: experimental economics, applied microeconomics, industrial organization.</p>
 		</section>
 	</div>
