--- a/views/menu.html
+++ b/views/menu.html
@@ -1,49 +1,56 @@
-<h1 id="profileTitle" class="title">Irina Zotova</h1>
+<h1 id="profileTitle" class="title">Irina Zotova, Ph.D</h1>
 <div id="content-anchor"></div>
 <nav id="menu-phantom"></nav>
-<nav id="menu" class="navbar navbar-inverse"  ng-controller="menu">
-	<div class="container">
-		<a id="home-menu" ui-sref="home" ng-click="smoothScroll()" class="navbar-brand" title="HOME" ng-class="{ active: $state.is('home')}" >
-			<i class="fa fa-2x fa-id-card" aria-hidden="true"></i>
-		</a>
-		<div class="navbar-header">
-			<button type="button"
-			        class="navbar-toggle"
-			        data-toggle="collapse"
-			        data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				<li class="nav-item" ng-class="{ active: $state.is('education')}">
-					<a ui-sref="education" ng-click="smoothScroll()">EDUCATION</a>
-				</li>
-				<li class="nav-item" ng-class="{ active: $state.is('research')}">
-					<a ui-sref="research" ng-click="smoothScroll()">RESEARCH</a>
-				</li>
-				<li class="nav-item" ng-class="{ active: $state.is('teaching')}">
-					<a ui-sref="teaching" ng-click="smoothScroll()">TEACHING</a>
-				</li>
-				<li class="nav-item" ng-class="{ active: $state.is('feedback')}">
-					<a ui-sref="feedback" ng-click="smoothScroll()">FEEDBACK</a>
-				</li>
-<!--				<li class="dropdown" ng-class="{ active: $state.is('teaching') || $state.is('classMaterials') }">
-					<a ui-sref="teaching"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teaching <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a ui-sref="classMaterials">Class Materials</a></li>
-					</ul>
-				</li>-->
-				<li class="nav-item" ng-class="{ active: $state.is('references')}">
-					<a ui-sref="references" ng-click="smoothScroll()">REFERENCES</a>
-				</li>
-				<li class="nav-item" ng-click="$state.go('cv')" ng-class="{ active: $state.is('cv')}">
-					<a ng-href="{{cvRef}}"  target="_blank">CV</a>
-				</li>
-			</ul>
-		</div>
-	</div>
+<nav id="menu" class="navbar navbar-inverse" ng-controller="menu">
+  <div class="container">
+    <a
+      id="home-menu"
+      ui-sref="home"
+      ng-click="smoothScroll()"
+      class="navbar-brand"
+      title="HOME"
+      ng-class="{ active: $state.is('home')}"
+    >
+      <i class="fa fa-2x fa-id-card" aria-hidden="true"></i>
+    </a>
+    <div class="navbar-header">
+      <button
+        type="button"
+        class="navbar-toggle"
+        data-toggle="collapse"
+        data-target=".navbar-collapse"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-item" ng-class="{ active: $state.is('education')}">
+          <a ui-sref="education" ng-click="smoothScroll()">EDUCATION</a>
+        </li>
+        <li class="nav-item" ng-class="{ active: $state.is('research')}">
+          <a ui-sref="research" ng-click="smoothScroll()">RESEARCH</a>
+        </li>
+        <li class="nav-item" ng-class="{ active: $state.is('teaching')}">
+          <a ui-sref="teaching" ng-click="smoothScroll()">TEACHING</a>
+        </li>
+        <li class="nav-item" ng-class="{ active: $state.is('feedback')}">
+          <a ui-sref="feedback" ng-click="smoothScroll()">FEEDBACK</a>
+        </li>
+        <li class="nav-item" ng-class="{ active: $state.is('references')}">
+          <a ui-sref="references" ng-click="smoothScroll()">REFERENCES</a>
+        </li>
+        <li
+          class="nav-item"
+          ng-click="$state.go('cv')"
+          ng-class="{ active: $state.is('cv')}"
+        >
+          <a ng-href="{{cvRef}}" target="_blank">CV</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
