--- a/views/pages/education.html
+++ b/views/pages/education.html
@@ -1,24 +1,33 @@
-<div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-controller="education">
+<div
+  class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8"
+  ng-controller="education"
+>
+  <p></p>
+  <h4><b>Education</b></h4>
+  <edu>
+    <author>Ph.D. Economics, University of California, Irvine</author>
+    <span class="years">2018</span>
+  </edu>
+  <edu>
+    <author>M.A. Economics, University of California, Irvine</author>
+    <span class="years">2014</span>
+  </edu>
+  <edu>
+    <author
+      >B.S. Economics/Mathematics, <i>Cum Laude</i>, University of California,
+      San Diego</author
+    >
+    <span class="years">2013</span>
+  </edu>
 
-	<p>
-	<h4><b>Education</b></h4>
-	<edu>
-		<author>Ph.D. Economics, University of California, Irvine</author> <span class="years">2018</span>
-	</edu>
-	<edu>
-		<author>M.A. Economics, University of California, Irvine</author> <span class="years">2014</span>
-	</edu>
-	<edu>
-		<author>B.S. Economics/Mathematics, <i>Cum Laude</i>, University of California, San Diego</author> <span class="years">2013</span>
-	</edu>
-
-
-	<p>
-	<h4><b>Skills</b></h4>
-	<ski>
-		<author><b>Technical:</b>&nbsp; Stata, MATLAB, z-Tree, LaTeX, Java</author>
-	</ski>
-	<ski>
-		<author><b>Foreign Language:</b>&nbsp; Russian (Native)</author>
-	</ski>
+  <p></p>
+  <h4><b>Skills</b></h4>
+  <ski>
+    <author
+      ><b>Technical:</b>&nbsp; Stata, Microsoft Office, LaTeX, z-Tree.</author
+    >
+  </ski>
+  <ski>
+    <author><b>Languages:</b>&nbsp; English (fluent), Russian (native).</author>
+  </ski>
 </div>
