--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -1,24 +1,35 @@
 <div id="home" ng-controller="home">
-	<div class="col-sm-5 leftProfile">
-		<section>
-			<div class="profileImage">
-				<img style="display: none"  class="center-block img-responsive img-profile" ng-src="images/irinazotova3.jpg" imageonload="images/loading_icon_64.gif" alt="Processing...">
-			</div>
-			<div class="profileAddress">
-				<p>izotova@uci.edu</p>
-				<address>
-					<b>University of California, Irvine</b><br>
-					Department of Economics<br>
-					3151 Social Science Plaza<br>
-					Irvine, CA 92697-5100
-				</address>
-			</div>
-		</section>
-	</div>
-	<div class="col-sm-5 rightProfile">
-		<section>
-			<p>I am a Ph.D. candidate in Economics at UC Irvine and am currently on the job market.</p>
-			<p>Fields: experimental economics, applied microeconomics, industrial organization.</p>
-		</section>
-	</div>
+  <div class="col-sm-5 leftProfile">
+    <section>
+      <div class="profileImage">
+        <img
+          style="display: none"
+          class="center-block img-responsive img-profile"
+          ng-src="images/irinazotova3.jpg"
+          imageonload="images/loading_icon_64.gif"
+          alt="Processing..."
+        />
+      </div>
+      <div class="profileAddress">
+        <p>zotova.irina.a@gmail.com</p>
+      </div>
+    </section>
+  </div>
+  <div class="col-sm-5 rightProfile">
+    <section>
+      <p>
+        I am an economist and Consultant at Micronomics, an economic research
+        and consulting firm based in Los Angeles, California. At Micronomics, I
+        have been engaged with matters involving the airline industry, patent
+        infringement, insurance, and fraud. My consulting experience includes
+        extensive use of econometric techniques, regression analysis, and
+        calculation of lost profits and reasonable royalties.
+      </p>
+      <p>
+        I received a Ph.D. and M.A. in Economics from the University of
+        California, Irvine and a B.S. in Mathematics and Economics from the
+        University of California, San Diego.
+      </p>
+    </section>
+  </div>
 </div>
