--- a/views/pages/research.html
+++ b/views/pages/research.html
@@ -17,13 +17,12 @@
 	<p>
 		<h4><b>Working Papers</b></h4>
 		<toc>
-			<q>Worker History and Labor Markets: The Role of Costly Information</q><br>
-			<text><i>Job Market Paper</i></text>
+			<q>Impact of COVID-19 on Airline Pricing</q>with Pyung Y<br>
+			<text><i>Under Review</i></text>
 		</toc>
 		<context>
 			<text>
-				Employers face an obstacle when hiring employees: without the employees' work records, the employers do not know what quality of performance to expect. Existing experimental literature in agency theory provides employers with their employees' work history at no cost. I extend this research by placing a price on the information to develop a more realistic case. Through experimental evidence, I find employers absorb the cost of obtaining history, and do not shift the burden of the fee onto the employees in the form of lower wages. If employers have access to employees' history, they offer wages that are positively correlated with the employees' work ethic. However, when they are not presented with a history, the employers base wages on their own experiences.
-			</text>
+				The COVID-19 pandemic produced unprecedented, unimaginable devastation throughout the world. The need to self-quarantine forced many industries, including the air travel business, to grind to a halt, producing potentially irreparable consequences. In order to better understand the extent of the impact on the airline industry, we applied sophisticated econometric techniques to voluminous flight data maintained by the United States Department of Transportation and determined that the pandemic brought about a decline in average airfares of $24 per quarter following the first quarter of 2020.			</text>
 		</context>
 	</p>
 	<p>
