update based on the comments

--- a/views/menu.html
+++ b/views/menu.html
@@ -1,4 +1,4 @@
-<h1 id="profileTitle" class="title">Irina Zotova, Ph.D</h1>
+<h1 id="profileTitle" class="title">Irina Zotova, Ph.D.</h1>
 <div id="content-anchor"></div>
 <nav id="menu-phantom"></nav>
 <nav id="menu" class="navbar navbar-inverse" ng-controller="menu">
