--- a/views/pages/references.html
+++ b/views/pages/references.html
@@ -29,7 +29,8 @@
 
   <div class="col-sm-4">
     <h4>
-      <b>Professor<br />Roy Weinstein</b>
+      <br />
+      <b>Roy Weinstein</b>
     </h4>
     <address class="profile-modal">
       Managing Director<br />
