--- a/views/pages/research.html
+++ b/views/pages/research.html
@@ -17,13 +17,15 @@
 	<p>
 		<h4><b>Working Papers</b></h4>
 		<toc>
-			<q>Impact of COVID-19 on Airline Pricing</q>with Pyung Y<br>
+			<q>Impact of COVID-19 on Airline Pricing</q> (with Pyung Yu)<br>
 			<text><i>Under Review</i></text>
 		</toc>
 		<context>
 			<text>
 				The COVID-19 pandemic produced unprecedented, unimaginable devastation throughout the world. The need to self-quarantine forced many industries, including the air travel business, to grind to a halt, producing potentially irreparable consequences. In order to better understand the extent of the impact on the airline industry, we applied sophisticated econometric techniques to voluminous flight data maintained by the United States Department of Transportation and determined that the pandemic brought about a decline in average airfares of $24 per quarter following the first quarter of 2020.			</text>
 		</context>
+		<br>
+		<q>Worker History and Labor Markets: The Role of Costly Information</q>
 	</p>
 	<p>
 		<toc>
