Front Page content update

--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -21,10 +21,11 @@
         I am an economist and Consultant at Micronomics, an economic research
         and consulting firm based in Los Angeles, California. At Micronomics, I
         have been engaged with litigation matters involving patent infringement
-        and fraud in the telecommunications, insurance, and airline industries.
-        My consulting experience includes extensive use of econometric
-        techniques, regression analysis, and calculation of lost profits and
-        reasonable royalties.
+        and fraud in a variety of industries, including telecommunications,
+        semiconductors, insurance, and airline transportation. My consulting
+        experience includes extensive use of econometric techniques, large
+        database management, regression analysis, and calculation of lost
+        profits and reasonable royalties.
       </p>
       <p>
         I received a Ph.D. and M.A. in Economics from the University of
