bio update in connection with the change of employer

--- a/views/pages/home.html
+++ b/views/pages/home.html
@@ -18,18 +18,22 @@
   <div class="col-sm-5 rightProfile">
     <section>
       <p>
-        I am an economist and Consultant at Micronomics, an economic research
-        and consulting firm based in Los Angeles, California. At Micronomics, I
-        have been engaged with litigation matters involving patent infringement
-        and fraud in a variety of industries, including telecommunications,
-        semiconductors, insurance, and airline transportation. My consulting
-        experience includes extensive use of econometric techniques, large
-        database management, regression analysis, and calculation of lost
+        I am a Managing Economist in the Economics & Damages practice at
+        Berkeley Research Group. Prior to joining BRG, I was a Consultant at
+        Micronomics, an economic research and consulting firm based in Los
+        Angeles, California.
+      </p>
+      <p>
+        I have been engaged with litigation matters involving patent
+        infringement, antitrust, and fraud in a variety of industries, including
+        telecommunications, semiconductors, insurance, and transportation. My
+        consulting experience includes extensive use of econometric techniques,
+        large database management, regression analysis, and calculation of lost
         profits and reasonable royalties.
       </p>
       <p>
         I received a Ph.D. and M.A. in Economics from the University of
-        California, Irvine and a B.S. in Mathematics and Economics from the
+        California, Irvine, and a B.S. in Mathematics and Economics from the
         University of California, San Diego.
       </p>
     </section>
